refactor: changed swagger, handle and add new middleware + small fixes
